<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lock Id"
        android:textSize="15dp"
        android:id="@+id/textView6" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text=""
        android:id="@+id/edt_lock_id"
        android:editable="false"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/btn_lock_save" />

    <TextView
        android:layout_width="wrap_content"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:text="@string/lock_name_hint"
        android:id="@+id/txt_lock_name"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/edt_lock_id"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/et_lock_name"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:ems="10"
        android:hint="@string/lock_name_hint"
        android:textColor="@color/abc_search_url_text_normal"
        android:inputType="textPersonName"
        android:textSize="30dp"
        android:padding="5dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txt_lock_name"
        android:layout_alignParentStart="true" />



    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_lock_save"
        android:text="@string/button_save"
        android:layout_marginTop="84dp"
        android:layout_below="@+id/et_lock_name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="51dp" />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_lock_cancel"
        android:text="@string/button_cancel"
        android:layout_marginEnd="184dp"
        android:layout_alignTop="@+id/btn_lock_save"
        android:layout_alignParentEnd="true" />




</RelativeLayout>