<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            card_view:cardBackgroundColor="@color/home_bg"
            card_view:cardCornerRadius="4dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:columnCount="2"
                android:rowCount="2">

                <EditText
                    android:id="@+id/et_room_name"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="0"
                    android:ems="10"
                    android:hint="@string/room_name_hint"
                    android:textColor="@color/admin_button_text_color"
                    android:inputType="textPersonName"
                    android:textSize="30dp"
                    android:padding="5dp"/>

                <Spinner
                    android:id="@+id/spinner_room_type"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="0"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="5dp"/>

                <EditText

                    android:id="@+id/et_room_id"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="1"
                    android:enabled="false"
                    android:textColor="@color/admin_button_text_color"
                    android:textSize="30dp"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/btn_add_room"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="1"
                    android:textSize="30dp"
                    android:padding="5dp"
                    android:textColor="@color/admin_button_text_color"
                    android:background="@color/admin_button_bg_color"/>
            </GridLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            card_view:cardBackgroundColor="@color/home_bg"
            card_view:cardCornerRadius="4dp">

            <RadioGroup
                android:id="@+id/rgSlave"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:checkedButton="@+id/slaveOne"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/slaveOne"
                    android:layout_width="0dp"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/admin_button_text_color"
                    android:buttonTint="@color/admin_button_text_color"
                    android:onClick="onRadioButtonClicked"
                    android:textSize="26dp"
                    android:text="@string/slave1" />

                <RadioButton
                    android:id="@+id/slaveTwo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/admin_button_text_color"
                    android:buttonTint="@color/admin_button_text_color"
                    android:onClick="onRadioButtonClicked"
                    android:textSize="26dp"
                    android:enabled="true"
                    android:text="@string/slave2" />

                <RadioButton
                    android:id="@+id/slaveThree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/admin_button_text_color"
                    android:buttonTint="@color/admin_button_text_color"
                    android:onClick="onRadioButtonClicked"
                    android:enabled="true"
                    android:textSize="26dp"
                    android:text="@string/slave3" />

                <RadioButton
                    android:id="@+id/slaveFour"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/admin_button_text_color"
                    android:buttonTint="@color/admin_button_text_color"
                    android:onClick="onRadioButtonClicked"
                    android:enabled="true"
                    android:textSize="26dp"
                    android:text="@string/slave4" />
            </RadioGroup>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="6">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                card_view:cardBackgroundColor="@color/home_bg"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btn_add_sensor"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:enabled="false"
                        android:text="@string/button_add_sensor"
                        android:textSize="30dp"
                        android:textColor="@color/admin_button_text_color"
                        android:background="@color/admin_button_bg_color"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_sensor"
                        android:layout_width="match_parent"
                        android:layout_height="183dp"
                        android:layout_marginTop="5dp"
                        android:scrollbars="vertical" />

                    <Button
                        android:id="@+id/btn_add_curtain"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:enabled="false"
                        android:text="@string/button_add_curtain"
                        android:textSize="30dp"
                        android:textColor="@color/admin_button_text_color"
                        android:background="@color/admin_button_bg_color"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_curtain"
                        android:layout_width="match_parent"
                        android:layout_height="183dp"
                        android:layout_marginTop="5dp"
                        android:scrollbars="vertical" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:layout_marginLeft="2dp"
                card_view:cardBackgroundColor="@color/home_bg"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btn_add_appliance"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:enabled="false"
                        android:text="@string/button_add_appliance"
                        android:textSize="30dp"
                        android:textColor="@color/admin_button_text_color"
                        android:background="@color/admin_button_bg_color"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_appliance"
                        android:layout_width="match_parent"
                        android:layout_height="183dp"
                        android:layout_marginTop="5dp"
                        android:scrollbars="vertical" />

                    <Button
                        android:id="@+id/btn_add_gateController"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:enabled="false"
                        android:text="@string/button_add_GATE_CONTROLLER"
                        android:textSize="30dp"
                        android:textColor="@color/admin_button_text_color"
                        android:background="@color/admin_button_bg_color"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_GATE_CONTROLLER"
                        android:layout_width="match_parent"
                        android:layout_height="183dp"
                        android:layout_marginTop="5dp"
                        android:scrollbars="vertical" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="@string/next"
            android:textSize="30dp"
            android:textColor="@color/admin_button_text_color"
            android:background="@color/admin_button_bg_color"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
