<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_user_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            card_view:cardBackgroundColor="@color/home_bg"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    android:id="@+id/tv_aa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/contact_details"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:text="DEFT"
                    android:inputType="textPersonName"
                    android:textSize="30sp"
                    app:met_clearButton="true"
                    app:met_errorColor="@color/error"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/floatingLabelText"
                    app:met_minCharacters="4"
                    app:met_underlineColor="@color/correct" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:text="1234567890"
                    android:textSize="30sp"
                    app:met_clearButton="true"
                    app:met_errorColor="@color/error"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/floatingLabelText"
                    app:met_maxCharacters="10"
                    app:met_minCharacters="10"
                    app:met_underlineColor="@color/correct" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:text="deft@gmail.com"
                    android:inputType="textEmailAddress"
                    android:textSize="30sp"
                    app:met_clearButton="true"
                    app:met_errorColor="@color/error"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/floatingLabelText"
                    app:met_minCharacters="10"
                    app:met_underlineColor="@color/correct" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_user_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            card_view:cardBackgroundColor="@color/home_bg"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    android:id="@+id/tv_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/used_id"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Lock User Password"
                    android:inputType="textPersonName"
                    android:textSize="30sp"
                    android:text=""
                    app:met_clearButton="true"
                    app:met_errorColor="@color/error"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/floatingLabelText"
                    app:met_minCharacters="4"
                    app:met_underlineColor="@color/correct" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_user_ipAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="IP Address"
                    android:inputType="textPersonName"
                    android:textSize="30sp"
                    android:text=""
                    app:met_clearButton="true"
                    app:met_errorColor="@color/error"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/floatingLabelText"
                    app:met_minCharacters="4"
                    app:met_underlineColor="@color/correct" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_user_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Port"
                    android:inputType="textPersonName"
                    android:textSize="30sp"
                    android:text=""
                    app:met_clearButton="true"
                    app:met_errorColor="@color/error"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/floatingLabelText"
                    app:met_minCharacters="4"
                    app:met_underlineColor="@color/correct" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="30sp"
                    app:met_clearButton="true"
                    app:met_errorColor="@color/error"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/floatingLabelText"
                    app:met_minCharacters="6"
                    app:met_underlineColor="@color/correct" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textSize="30sp"
                    app:met_clearButton="true"
                    app:met_errorColor="@color/error"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/floatingLabelText"
                    app:met_minCharacters="6"
                    app:met_underlineColor="@color/correct" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_user_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        card_view:cardBackgroundColor="@color/home_bg"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_admin_user_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/admin_user_id"
            android:inputType="text"
            android:text="v@k5.com"
            android:textSize="30sp"
            app:met_clearButton="true"
            app:met_errorColor="@color/error"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/floatingLabelText"
            app:met_minCharacters="5"
            app:met_underlineColor="@color/correct" />



            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_admin_user_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:text="123456"
                android:inputType="textPassword"
                android:textSize="30sp"
                app:met_clearButton="true"
                app:met_errorColor="@color/error"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="@color/floatingLabelText"
                app:met_minCharacters="6"
                app:met_underlineColor="@color/correct" />

            <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/next" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

    </ScrollView>




